// To use the "libprotobuf-lite.lib" library for C++ code.
option optimize_for = LITE_RUNTIME;


// Namespace: MESSAGE
package CMD_DHS;

//SUB_S_USER_DHS_INFO
message tagSeaMonster
{
    optional int32  monster_id = 1;             //海怪ID
	optional int32	monster_hp = 2;				//海怪血量
	optional int32  bullet_num = 3;             //子弹数量
	optional int64  left_times = 4;             //剩余召唤时间
	optional int32  monster_max_hp = 5;         //海怪最大血量
	optional int64  summon_times = 6;           //召唤时间
};

message tagUserMonsterItem
{
    optional uint32 item_id = 1;			   //道具ID
	optional int32	used = 2;				   //已经使用
	optional int32  total = 3;				   //总数量
}

//SUB_S_USER_DHS_GAME_INFO
message CMD_User_SeaMonsterInfo_S
{
    optional tagSeaMonster user_monster = 1;    //海怪信息
	repeated tagUserMonsterItem user_items = 2; //物品	
	repeated int32 user_puzzle = 3;             //拼图	
	optional int64 puzzid_start = 4;            //碎片开启时间
	optional int64 puzzid_end = 5;              //碎片结束时间
}

//使用召唤石
message CMD_S_USE_SUMMON_GEM
{
	optional int32  item_id = 1;                //物品ID
}

//使用召唤石
message CMD_C_USE_SUMMON_GEM
{
   optional int32 result = 1;                  //使用返回0成功1今日怪物已杀2子弹未用完
   optional int32 bullet_num = 2;              //子弹数量
   optional uint32 item_id = 3;                //使用的召唤石id
}

//开火
message CMD_C_DHS_USER_FIRE
{
   optional int32 is_crit = 1;                 //是否暴击范围
}

//开火
message CMD_S_DHS_USER_FIRE
{
   optional int32 result = 1;                 //开火成功0成功1无子弹2无怪物
   optional int64 monster_hp = 2;			  //怪物血量
   optional int32 money = 3;                  //掉落的金币数量
   optional int32 item_id = 4;                //掉落的物品ID 
   optional int32 item_num = 5;               //掉落的物品数量
   optional int32 puzzle_id = 6;              //掉落的碎片ID
   optional int32 puzzle_num = 7;             //掉落的碎片数量
}

//狂暴状态
message CMD_S_TRRIGETER_BUFF
{
   optional uint32 time = 1;				 //剩余时间(秒)
}

//请求拼图
message CMD_C_PLAY_PUZZLE_REQ
{
   optional int32 puzzle_id = 1;			//拼图ID
}

message CMD_S_PLAY_PUZZLE_RESULT
{
   optional int32 result = 1;               //0成功1数量不足2该ID已有3已拼满4过期
   optional int32 puzzle_id = 2;		    //拼图ID
}

//请求拼图奖励
message CMD_C_PUZZLE_REWARD_REQ
{
   
}

message tagPuzzleItem
{
   optional int32 item_id = 1;              //奖励的物品ID 
   optional int32 item_num = 2;             //奖励的物品数量
};

message CMD_S_PUZZLE_REWARD_RESULT
{
   optional int32 result = 1;               //0成功1数量不足2过期
   optional int32 money = 2;                //奖励的金币数量
   repeated tagPuzzleItem user_items = 3;   //奖励的物品列表	
}
